# docker-files

./: .gitignore  README.md
.github/workflows/: docker-base.yml
python-3.10-cv/: Dockerfile  README.md  pyproject.toml
python-3.14-smartid/: Dockerfile  requirements.txt
python-3.8-ml/: Dockerfile
python-3.8-ocr/: Dockerfile
python-ml-3.8/: Dockerfile  requirements.txt
