[tool.poetry]
name = "cv-base-image"
version = "1.0.0"
description = "Base image"
authors = ["Ashok Kumar Pant <asokpant@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.8, <4.0"
protobuf = "~=4.21.0"
grpcio = "~=1.53.0"
grpcio-tools = "~=1.53.0"
pandas = ">=1.1.0"
numpy = ">=1.19.1"
matplotlib = ">=3.3.1"
seaborn = ">=0.10.1"
Shapely = ">=1.7.0"
elasticsearch = ">=8.7.0"
requests = ">=2.24.0"
flask = ">=1.1.2"
flask_cors = ">=3.0.8"
inject = ">=4.3.0"
setuptools = ">=49.6.0"
joblib = ">=0.16.0"
gevent = ">=20.6.2"
kafka-python = ">=2.0.1"
boto3 = ">=1.14.43"
zipfile38 = ">=0.0.3"
psutil = ">=5.7.2"
opentelemetry-api = "==1.19.0"
opentelemetry-sdk = "==1.19.0"
opentelemetry-instrumentation-grpc = "==0.40b0"
opentelemetry-instrumentation = "==0.40b0"
enum34 = ">=1.1.10"
six = ">=1.12.0"
argparse = ">=1.4.0"
configparser = ">=3.5.3"
google = ">=3.0.0"
botocore = ">=1.17.43"
mysql-connector-python = ">=8.0.27"
google-cloud-storage = ">=1.42.0"
python-elasticsearch-logging = "==2.0.6"

urllib3 = ">=1.26.2,<2.0.0"
faiss_cpu = ">=1.7.4"
h5py = ">=3.8.0"
ImageHash = ">=4.3.1"
onnx = ">=1.12.0"
onnxruntime = ">=1.13.1"
opencv_python = ">=4.8.0.74"
Pillow = ">=10.0.0"
pydantic = ">=2.2.1"
pymilvus = ">=2.2.5"
pyzmq = ">=25.1.0"
Requests = ">=2.31.0"
scikit_image = ">=0.19.3"
scikit_learn = ">=1.0.2"
scipy = ">=1.9.3"
torch = ">=2.0.1"
tqdm = ">=4.65.0"
vidgear = ">=0.3.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "PyPI"
priority = "primary"

